[gd_scene load_steps=7 format=3 uid="uid://dr5fq4v3lflqw"]

[ext_resource type="Script" path="res://Scripts/Nexus/Pages/roguelike-page.gd" id="1_jidoa"]
[ext_resource type="FontFile" uid="uid://yxygawtc05lh" path="res://Assets/FontFiles/Montserrat/Montserrat-SemiBold.ttf" id="2_nkh2h"]
[ext_resource type="PackedScene" uid="uid://b1448adgu16mm" path="res://Prefabs/Nexus/EyeCandy/heart.tscn" id="3_1mvl7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xocjd"]
bg_color = Color(0.932638, 0.524259, 3.61943e-05, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.995835, 0.60304, 0.54007, 1)
border_blend = true
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjaq0"]
bg_color = Color(0.996999, 0.210579, 0.23255, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.609567, 0.0138194, 0.225787, 1)
border_blend = true
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ht8i6"]
bg_color = Color(0.202323, 0.666902, 0.0149585, 1)
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color(0.124193, 0.344737, 0.0795741, 1)
border_blend = true
corner_radius_top_left = 13
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 13

[node name="RoguelikePage" type="Node2D"]
script = ExtResource("1_jidoa")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -565.0
offset_right = 370.0
offset_bottom = 565.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xocjd")

[node name="BasicInfo" type="Node2D" parent="."]

[node name="ProgressBar" type="Node2D" parent="BasicInfo"]

[node name="RedPanel" type="Panel" parent="BasicInfo/ProgressBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -535.0
offset_right = 340.0
offset_bottom = -425.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cjaq0")

[node name="GreenPanel" type="Panel" parent="BasicInfo/ProgressBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -535.0
offset_bottom = -425.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ht8i6")

[node name="ProgressLabel" type="Label" parent="BasicInfo/ProgressBar"]
offset_left = -305.0
offset_top = -523.0
offset_right = 105.0
offset_bottom = -444.0
theme_override_fonts/font = ExtResource("2_nkh2h")
theme_override_font_sizes/font_size = 64
text = "0 / 100 cards"

[node name="Hearts" type="Node2D" parent="BasicInfo"]
position = Vector2(-150, -340)

[node name="Heart" parent="BasicInfo/Hearts" instance=ExtResource("3_1mvl7")]
position = Vector2(-120, 0)

[node name="Heart2" parent="BasicInfo/Hearts" instance=ExtResource("3_1mvl7")]

[node name="Heart3" parent="BasicInfo/Hearts" instance=ExtResource("3_1mvl7")]
position = Vector2(120, 0)

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="BasicInfo/Hearts"]

[node name="ChoiceBox" type="Node2D" parent="."]
